@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.4741 2006/01/12 02:04:35 lculik Exp $
+ * $Id: ChangeLog,v 1.4742 2006/01/12 13:15:55 druzus Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2006-01-12 18:10 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
+  * xharbour/source/rtl/inkey.c
+    ! fixed typo in copy and past in my last commit
 
 2006-01-12 14:15 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
   * xharbour/include/hbapi.h
